--- a/admin/scss/_page.scss
+++ b/admin/scss/_page.scss
@@ -4,16 +4,20 @@
 	width: 100%;
 	overflow: clip;
 }
+
 #page {
 	overflow: clip;
+
 	.site-main {
 		display: grid;
 		grid-template-columns: 250px 1fr;
 		grid-template-rows: auto;
 		margin-top: 140px;
-		@include mx.max_w(1280){
+
+		@include mx.max_w(1280) {
 			grid-template-columns: 200px 1fr;
 		}
+
 		&.hide-navi {
 			#view {
 				grid-row: 1;
@@ -28,13 +32,16 @@
 			min-height: 100vh;
 
 			.site-contents {
+				height: 100%;
 				margin-top: 0px;
 				display: grid;
 				grid-template-columns: 1fr 250px;
-				grid-template-rows: auto;
+				grid-template-rows: 1fr;
 
 				&.hide-right {
-					.postinfo,.contents {
+
+					.postinfo,
+					.contents {
 						grid-column: 1 / span 2;
 					}
 				}
@@ -52,10 +59,11 @@
 					line-height: 1.5;
 					position: fixed;
 					width: 100%;
-					top:100px;
+					top: 100px;
 					background: #EFF7F4;
 					z-index: 100;
-					height: 60px;
+					height: 70px;
+
 					.icon {
 						flex-shrink: 0;
 						font-size: 1em;
@@ -68,76 +76,94 @@
 					color: #004098;
 
 				}
+
 				.toggle-genre1 {
-						width: 250px;
-						height: 50px;
-						right: 0;
-						top: 100px;
-						z-index: 10;
-						position: fixed;
-						gap: 5px;
+					width: 250px;
+					height: 50px;
+					right: 0;
+					top: 100px;
+					z-index: 10;
+					position: fixed;
+					gap: 5px;
+					display: flex;
+					align-items: center;
+					background: #D4EBE3;
+					text-align: left;
+					z-index: 500;
+
+					@include mx.hover {
+						background: #c1e6d9;
+					}
+
+					padding: 5px 0.5em 5px 1em;
+					color: #707070;
+
+					&.close {
+						height: 40px;
 						display: flex;
 						align-items: center;
-						background: #D4EBE3;
-						text-align: left;
-						 z-index: 500;
-						@include mx.hover{
-							background: #c1e6d9;
-						}
-						    padding: 5px 0.5em 5px 1em;
-							color: #707070;
-						&.close {
-							height: 40px;
-							display: flex;
-							align-items: center;
-							justify-content: center;
-							padding: 0px 1em;
-							width: 40px;
+						justify-content: center;
+						padding: 0px 1em;
+						width: 40px;
 
-							.text {
-								display: none;
-							}
+						.text {
+							display: none;
 						}
-					}	
-				.postinfo,.contents {
+					}
+				}
+
+				.postinfo,
+				.contents {
 					margin: 0;
-					grid-row: 2;
-					grid-column: 1;
 					float: none;
 					width: 100%;
-					padding: 0 40px 80px;
-					@include mx.max_w(1080){
-						padding: 0 20px 80px;
+					padding: 20px 40px 80px;
+
+					@include mx.max_w(1080) {
+						padding: 20px 20px 80px;
 					}
+
 					span {
 						padding: 0;
 					}
 				}
-				.contents{
+
+				.contents {
 					grid-column: 1 / span 2;
 				}
-				.contents{
+
+				.contents {
 					padding-top: 30px;
-				}	
+				}
+
 				.right {
-					grid-row: 1 / span 2;
+					grid-row: 1;
 					grid-column: 2;
 					float: none;
 					width: 100%;
+					height: 100%;
+					padding: 0;
 					background: #D4EBE3;
 					color: #888888;
 					position: relative;
 					z-index: 200;
-					.genre1{
+
+					.genre1,
+					.genre2 {
 						background: #D4EBE3;
-						#blog{
+
+						#blog,
+						#worry {
 							padding: 10px 0 20px;
 						}
 					}
+
 					&.hide {
 						background: transparent;
 						height: 0px;
-						.genre1{
+
+						.genre1,
+						.genre2 {
 							transform: translateX(250px);
 							opacity: 0;
 							pointer-events: none;
@@ -145,14 +171,15 @@
 						}
 					}
 
-					
+
 
 					button {
 						color: #888888;
 						padding: 10px 1em;
 					}
 
-					.genre1 {
+					.genre1,
+					.genre2 {
 						>ul {
 							>li {
 
@@ -184,6 +211,7 @@
 			background: #fff;
 			padding: 20px;
 		}
+
 		&--add-blog {
 			display: flex;
 			flex-direction: column;
@@ -427,65 +455,333 @@
 				}
 			}
 		}
-		&--list-blog{
-			.align--right{
+
+		&--list-blog {
+			.align--right {
 				margin: -15px 0;
 			}
-			.tbl{
+
+			.tbl {
 				display: block;
 				border: none;
 				margin: 0;
-				*{
+
+				* {
 					display: block;
 				}
-				tr{
+
+				tr {
+					display: flex;
+					align-items: center;
+					gap: 15px 40px;
+					flex-wrap: wrap;
+
+					td {
+						padding: 0;
+						width: fit-content;
 						display: flex;
 						align-items: center;
-						gap:5%;
-						flex-wrap: wrap;
-						td{
-							padding: 0;
-							width: fit-content;
-							display: flex;
-							align-items: center;
-							
-							&:first-child{
-								width: 28%;
-								min-width: 350px;
-								p{
-									flex: 1; 
-									width: 100%;
-									gap:20px;
-								}
-								input{
-									flex: 1; 
-									max-width: 300px;
-									width: 100%;
-								}
+
+						&:first-child {
+							width: 28%;
+							min-width: 350px;
+
+							p {
+								flex: 1;
+								width: 100%;
+								gap: 20px;
 							}
-							&:nth-child(2){
-								gap:30px;
-								input{
-									transform: scale(1.3);
-								}
-								
-							}
-							.btn-square{
-								width: 100px;
-								height: 38px;
-								@include mx.fs(20);
-							}
-							label{
-								gap:10px;
-								display: flex;
-								align-items: center;
-							}
-							p{
-								display: flex;
-								align-items: center;
+
+							input {
+								flex: 1;
+								max-width: 300px;
+								width: 100%;
 							}
 						}
+
+						.btn-square {
+							width: 100px;
+							height: 38px;
+							@include mx.fs(20);
+						}
+
+						label {
+							gap: 10px;
+							display: flex;
+							align-items: center;
+						}
+
+						p {
+							display: flex;
+							align-items: center;
+						}
+					}
 				}
+			}
+		}
+	}
+}
+
+#view {
+	.contents {
+		.tbl {
+			display: block;
+			border: none;
+			margin: 0;
+
+			* {
+				display: block;
+			}
+
+			tr {
+				display: flex;
+				align-items: center;
+				gap: 15px 40px;
+				flex-wrap: wrap;
+
+				td {
+					margin: 0;
+					padding: 0;
+					width: fit-content;
+					display: flex;
+					align-items: center;
+					width: fit-content;
+
+					p {
+						gap: 20px;
+					}
+
+					input {
+						width: auto;
+					}
+
+					[name="search_name"] {
+						width: 300px;
+					}
+
+					[type="radio"] {
+						transform: scale(1.3);
+					}
+
+					select {
+						width: auto;
+						height: 44px;
+					}
+
+					.btn-square {
+						width: 100px;
+						height: 38px;
+						@include mx.fs(20);
+					}
+
+					label {
+						gap: 10px;
+						display: flex;
+						align-items: center;
+						margin-left: 25px;
+
+						&:first-child {
+							margin-left: 0;
+						}
+					}
+
+					p {
+						display: flex;
+						align-items: center;
+					}
+				}
+			}
+		}
+	}
+}
+
+.dropzone {
+	background: #DCE8E4;
+	height: 234px;
+	position: relative;
+
+	#preview-area {
+		pointer-events: none;
+		position: absolute;
+		width: calc(100% - 40px);
+		height: calc(100% - 40px);
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		z-index: 2;
+		img{
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+
+	&::after {
+		content: "";
+		width: calc(100% - 30px);
+		height: calc(100% - 30px);
+		border: dashed #888888 1px;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
+		pointer-events: none;
+		user-select: none;
+		z-index: 2;
+	}
+
+	.dz-message {
+		height: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		>div {
+			display: grid;
+			grid-template-columns: auto auto;
+			grid-template-rows: auto auto;
+			gap: 0 10px;
+			color: #888888;
+			&.hide{
+				display: none;
+			}
+			span {
+				grid-row: 1 / span 2;
+				grid-column: 1;
+				display: block;
+				@include mx.fs(80);
+				line-height: 1;
+			}
+
+			strong {
+				grid-row: 1;
+				grid-column: 2;
+				@include mx.fs(40);
+				display: block;
+				margin: 0;
+				transform: translateY(0.2em);
+			}
+
+			p {
+				margin: 0;
+				grid-row: 2;
+				grid-column: 2;
+				@include mx.fs(20);
+			}
+		}
+	}
+}
+
+.imagelist {
+	width: 100%;
+	margin-top: 20px;
+	ul {
+		width: 100%;
+		display: grid;
+		grid-template-columns: 1fr 1fr 1fr 1fr;
+		grid-template-rows: 1fr;
+		gap: 20px;
+
+		@include mx.max_w(1180) {
+			grid-template-columns: 1fr 1fr 1fr;
+			grid-template-rows: 1fr;
+		}
+
+		@include mx.max_w(960) {
+			grid-template-columns: 1fr 1fr;
+			grid-template-rows: 1fr;
+		}
+
+		li {
+			padding: 10px 15px;
+			background: #fff;
+
+			.drag-tab {
+				display: block;
+				margin: -20px -8px 0 auto;
+				cursor: grab;
+				width: fit-content;
+				img{
+					pointer-events: none;
+				}
+			}
+		}
+
+	}
+
+	&__top {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__top {
+		margin-bottom: 10px;
+
+		.btn--rotation {
+			background: #888888;
+			border-radius: 6px;
+
+			@include mx.hover {
+				background: #adadad;
+			}
+
+			input {
+				color: #fff;
+				border: none;
+				background: transparent;
+				padding-left: 20px;
+				padding: 3px 10px 3px 30px;
+			}
+
+			position: relative;
+
+			.icon {
+				pointer-events: none;
+				position: absolute;
+				color: #fff;
+				top: 50%;
+				transform: translateY(-50%);
+				left: 5px;
+				z-index: 2;
+			}
+		}
+	}
+
+	&__img {
+		img {
+			width: 100%;
+			height: auto;
+		}
+
+		input {
+			margin-top: 10px;
+			padding: 0;
+		}
+	}
+
+	&__bottom {
+		text-align: center;
+		margin-top: 10px;
+		padding: 0 30px;
+
+		input {
+			border: solid 2px #009B63;
+			color: #009B63;
+			background: #fff;
+			max-width: 170px;
+			width: 90%;
+			text-align: center;
+			padding: 1px 0px;
+			border-radius: 6px;
+
+			@include mx.hover {
+				background: #009B63;
+				color: #fff;
 			}
 		}
 	}
